tests/snapshots/parser_tests__err_invalid_modifier_decl.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:1:1

     1 │
       │ async handler() {
       │ ^^^
       │

  ⓘ Modifier 'async' cannot be applied to declarations
────────────────────────────────────────────────────────────
